2005-12-16  Christian Kirbach  <Christian.Kirbach@student.uni-siegen.de>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* gst/autoplug/gstspider.c: (gst_spider_identity_unplug),
	  (gst_spider_create_and_plug):
	* gst/elements/gstbufferstore.c: (gst_buffer_store_add_buffer_func):
	   Do not silently discard return values of g_list_delete_link()
	   and g_list_append(). This would trigger gcc4 warnings that
	   are treated as errors in CVS builds (fixes: #324260). Also
	   ifdef out unused function while we are at it.
	
2005-10-27  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/retag/retag.c: (main):
	  Update retag example so that it actually works (#319316).

2005-10-20  Tim-Philipp Müller  <tim at centricular dot net>

	* tools/gst-inspect.c: (print_interfaces),
	(print_element_properties_info):
	  Fix interface output with the -a option and don't print
	  newlines after double/float properties.

2005-09-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/LINGUAS:
	* po/da.po:
	  Added Danish translation from
	  Mogens Jaeger <mogensjaeger@get2net.dk>

2005-09-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/LINGUAS:
	* po/fi.po:
	  Added Finnish translation from
	  Tommi Vainikainen <Tommi.Vainikainen@iki.fi>

2005-09-21  Francis Labonte  <francis_labonte at hotmail dot com>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gstinfo.c: (_gst_debug_nameof_funcptr),
	(_gst_debug_register_funcptr):
	  Add mutex to serialise access to the hash table with
	  the function pointer => function name string mapping;
	  make that hash table static scope (#316809).

2005-09-13  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/config.h:
	  update some defines for cleaner and better compilation
	* win32/gst-typefind.vcproj:
	  added gst-typefind to the MSVC7 build

2005-09-13  Julien MOUTTE  <julien@moutte.net>

	* gst/gstregistry.c: (gst_registry_add_plugin): duplicate plugin